--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build:qq": "taro build --type qq",
     "build:jd": "taro build --type jd",
     "build:quickapp": "taro build --type quickapp",
-    "dev:weapp": "npm run build:weapp -- --watch",
+    "dev:weapp": "set NODE_ENV=production && npm run build:weapp -- --watch",
     "dev:swan": "npm run build:swan -- --watch",
     "dev:alipay": "npm run build:alipay -- --watch",
     "dev:tt": "npm run build:tt -- --watch",
@@ -42,6 +42,8 @@
     "@tarojs/runtime": "3.1.4",
     "@tarojs/taro": "3.1.4",
     "lodash": "4.17.15",
+    "mobx": "^6.5.0",
+    "mobx-react": "^7.3.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "taro-ui": "^3.0.0-alpha.3"
@@ -60,8 +62,8 @@
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "stylelint": "9.3.0",
     "prettier": "^2.4.1",
+    "stylelint": "9.3.0",
     "typescript": "^4.1.0"
   }
 }
